swiftide-macros/tests/tool/tool_missing_parameter_fail.stderr
error: Arguments in spec and in function do not match:
        The following parameters are missing from the function signature: ["Message"], The following parameters are missing from the spec: ["msg"]
 --> tests/tool/tool_missing_parameter_fail.rs:2:5
  |
2 | /     description = "My first tool",
3 | |     param(name = "Message", description = "A message for testing")
  | |__________________________________________________________________^
